# cached

./: .cursorrules  .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.tpl  lint-test.sh  readme.sh  rust-toolchain.toml
.claude/: settings.json
.claude/agents/: pr-code-reviewer.md  pr-consumer-reviewer.md  pr-fix-implementer.md
.claude/skills/: consumer-experience-review  pr-cycle  pr-review
.github/: copilot-instructions.md
.github/workflows/: build.yml  codspeed.yml  comment-close-issue-257.yml  format-lint-build-test.yml  release.yml  rust.yml
benches/: bench_stores.rs  cache_benches.rs
cached_proc_macro/: Cargo.toml
cached_proc_macro/src/: cached.rs  concurrent_cached.rs  helpers.rs  io_cached.rs  lib.rs  once.rs
cached_proc_macro_types/: Cargo.toml  README.md
cached_proc_macro_types/src/: lib.rs  to_fully_owned.rs
docs/: MIGRATION-1.0-AGENT.md  MIGRATION-1.0.md
docs/dev/: issue-closeout-tracker.md  v3.0.0-release-review.md
docs/migrations/: 0.x-to-1.0-human.md  0.x-to-1.0.md  1.0-to-1.1.md  1.1-to-2.0-human.md  1.1-to-2.0.md  2.0-to-2.0.1.md  2.0-to-3.0-human.md  2.0-to-3.0.md  2.0-to-unreleased.md  2.0.1-to-2.0.2.md
examples/: async_std.rs  basic.rs  basic_proc_macro.rs  disk.rs  disk_async.rs  dyn_trait_pass.rs  expires_per_key.rs  expiring_sized_cache.rs  kitchen_sink.rs  kitchen_sink_proc_macro.rs  read_me.rs  readme.rs  redis-async-async-std.rs  redis-async-tokio.rs  redis-async.rs  redis-client-side-cache-tokio.rs  redis.rs  resilience.rs  sharded.rs  sharded_expiring.rs  struct_method.rs  tokio.rs
examples/wasm/: Cargo.toml  README.md  index.html
examples/wasm/src/: main.rs
specs/: 0002-size-iter-evict-semantics.md  0004-redis-connection-string-redaction.md  0005-store-error-consistency.md  0008-method-name-deduplication.md  0011-redis-serialization-codec.md  0012-concurrent-metrics-trait.md  0013-macro-store-attribute-placement.md  0014-infallible-builders.md  0015-sharded-base-alias-collapse.md  0016-async-core-internal-feature.md  0017-redis-feature-axes.md  0019-ahash-default-feature.md  0022-serialize-cached-set-ref-return.md  0023-peek-read-trait-merge.md  0024-generated-companion-naming.md  0025-redb-disk-path-introspection.md  0026-serde-feature.md  0027-sync-writes-default-revert.md  0029-self-healing-deserialization-default.md  0030-force-refresh-result-fallback-interaction.md  0031-redis-backward-read-version-gate.md  0033-redb-revalidate-in-write-txn.md  0034-prime-companion-body-before-lock.md  README.md  builders.md  cargo-features.md  macro-cached.md  macro-concurrent-cached.md  macro-once.md  metrics.md  store-expiring.md  store-lru.md  store-redb.md  store-redis.md  store-sharded.md  store-ttl.md  store-unbound.md  trait-get-or-set-async.md  traits-concurrent.md  traits-core.md
specs/design/: 0001-non-sharded-custom-hasher.md  0003-redis-millisecond-ttl.md  0004-redis-connection-string-redaction.md  0005-store-error-consistency.md  0006-macro-quoted-attributes.md  0007-unbound-evictions-counter.md  0008-method-name-deduplication.md  0009-cached-get-shared-receiver.md  0010-read-optimized-sharded-lru.md  0011-redis-serialization-codec.md  0012-concurrent-metrics-trait.md  0016-async-core-internal-feature.md  0017-redis-feature-axes.md  0018-redis-key-escaping.md  0019-ahash-default-feature.md  0020-argument-error-unification.md  0021-redb-refresh-on-hit-cost.md  0023-peek-read-trait-merge.md  0025-redb-disk-path-introspection.md  0026-serde-feature.md  0027-sync-writes-default-revert.md  0028-per-entry-expiry-and-set-ttl-zero.md  0029-self-healing-deserialization-default.md  0030-force-refresh-result-fallback-interaction.md  0031-redis-backward-read-version-gate.md  0032-cached-async-to-get-or-set-async-rename.md  0033-redb-revalidate-in-write-txn.md  0034-prime-companion-body-before-lock.md  0035-seeded-per-key-lock-bucket-hasher.md  0036-in-impl-static-placement.md  README.md
src/: caches.rs  lib.rs  lru_list.rs  macros.rs  main.rs  proc_macro.rs  stores.rs
src/stores/: concurrent_timed.rs  disk.rs  expiring.rs  expiring_lru.rs  expiring_sized.rs  expiring_value_cache.rs  lru.rs  lru_ttl.rs  mod.rs  redb.rs  redis.rs  sized.rs  timed.rs  timed_sized.rs  ttl.rs  ttl_sorted.rs  unbound.rs
tests/: cached.rs  name_raw_ident.rs  next_major_macro.rs  next_major_macro_ui.rs  next_major_traits.rs  once_g1_positive.rs  proc_macro_v3_ui.rs  serialize_set_dispatch.rs  v3_additive_parity.rs  v3_async_setref_notsync_dispatch.rs  v3_cache_peek_with_expiry_status.rs  v3_concurrent_evictions_agg.rs  v3_contains_parity.rs  v3_custom_hasher_threaded.rs  v3_error_debug_redaction.rs  v3_evict_key.rs  v3_expiring_evict_order.rs  v3_expiring_lru_order.rs  v3_force_refresh.rs  v3_macros.rs  v3_macros_ui.rs  v3_metrics_unknown.rs  v3_per_entry_expiry.rs  v3_prime_and_attrs.rs  v3_redb_builder.rs  v3_redb_races.rs  v3_redb_races_async.rs  v3_redis_backward_read.rs  v3_redis_cache_set_ref.rs  v3_redis_selfheal.rs  v3_redis_ttl_optional.rs  v3_redis_ttl_validation.rs  v3_serialize_set.rs  v3_sharded_builder.rs  v3_sharded_concurrent_expiry.rs  v3_sharded_copy_from_err.rs  v3_sharded_expiring_set_single_eval.rs  v3_sharded_resize.rs  v3_sharded_zero_ttl.rs  v3_single_owner_zero_ttl.rs  (+3 more)
tests/ui/: cached_async_requires_async_feature.rs  cached_async_requires_async_feature.stderr  cached_cache_err_requires_result_return.rs  cached_cache_err_requires_result_return.stderr  cached_cache_err_result_fallback_exclusive.rs  cached_cache_err_result_fallback_exclusive.stderr  cached_cache_none_requires_option_return.rs  cached_cache_none_requires_option_return.stderr  cached_cache_none_with_cached_flag_exclusive.rs  cached_cache_none_with_cached_flag_exclusive.stderr  cached_const_generic_requires_convert.rs  cached_const_generic_requires_convert.stderr  cached_convert_malformed_unquoted.rs  cached_convert_malformed_unquoted.stderr  cached_convert_unparseable.rs  cached_convert_unparseable.stderr  cached_convert_without_key.rs  cached_convert_without_key.stderr  (+413 more)
(+15 files in other folders)
