[package]
name = "cached"
version = "3.0.0-rc.2"
authors = ["James Kominick <james@kominick.com>"]
description = "Generic cache implementations and simplified function memoization"
repository = "https://github.com/jaemk/cached"
documentation = "https://docs.rs/cached"
readme = "README.md"
categories = ["caching", "data-structures"]
keywords = ["cache", "memoize", "lru", "redis", "disk"]
license = "MIT"
edition = "2024"
rust-version = "1.89"
# Internal dev tooling and process docs that should not ship in the published crate.
exclude = [".agents/", ".claude/", ".github/", "bin/", "docs/dev/", "AGENTS.md", "CLAUDE.md"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[features]
default = ["proc_macro", "ahash", "time_stores"]
proc_macro = ["cached_proc_macro", "cached_proc_macro_types"]
ahash = ["dep:ahash", "hashbrown/default"]
async_core = []
async = ["async_core", "dep:async-lock"]
redis_store = ["redis", "r2d2", "serde", "rmp-serde", "serde_json"]
redis_connection_manager = ["redis_tokio", "redis/connection-manager"]
redis_smol = [
  "redis_store",
  "async",
  "redis/smol-comp",
]
redis_smol_native_tls = ["redis_smol", "redis/smol-native-tls-comp"]
redis_smol_rustls = ["redis_smol", "redis/smol-rustls-comp"]
redis_tokio = [
  "redis_store",
  "async",
  "redis/tokio-comp",
]
redis_tokio_native_tls = ["redis_tokio", "redis/tokio-native-tls-comp"]
redis_tokio_rustls = ["redis_tokio", "redis/tokio-rustls-comp"]
redis_async_cache = ["redis_store", "async", "redis_tokio", "redis/cache-aio"]
# `blocking` (and its async-channel/futures-lite deps) is only used to offload
# the synchronous redb operations off the async executor, so it is pulled by
# `redb_store` rather than `async`. Redis-only and in-memory async builds do not
# pay for it. The `blocking::unblock` call sites are `#[cfg(feature = "async")]`,
# so a sync-only `redb_store` build enables the dependency without invoking it.
redb_store = ["redb", "serde", "rmp-serde", "directories", "dep:blocking"]
time_stores = []

[dependencies.cached_proc_macro]
version = "3.0.0-rc.2"
path = "cached_proc_macro"
optional = true

[dependencies.cached_proc_macro_types]
version = "3.0.0-rc.2"
path = "cached_proc_macro_types"
optional = true

[dependencies.hashbrown]
version = "0.17"
default-features = false
features = ["inline-more"]

[dependencies.parking_lot]
version = "0.12.5"

[dependencies.thiserror]
version = "2"

[dependencies.ahash]
version = "0.8"
default-features = false
optional = true

# On non-wasm targets, enable runtime-rng so RandomState seeds from the OS RNG
# (closes a hash-flood DoS gap). On wasm32-unknown-unknown, getrandom has no
# usable backend unless the caller wires up wasm_js, so we leave runtime-rng
# out there. Cargo additively merges features across target-gated and
# unconditional sections for the same dep, so non-wasm gets runtime-rng while
# wasm falls back to compile-time seeding only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.ahash]
version = "0.8"
default-features = false
features = ["runtime-rng"]
optional = true


[dependencies.redis]
version = "1.0"
features = ["r2d2"]
optional = true

[dependencies.redb]
version = "4"
optional = true

[dependencies.rmp-serde]
version = "1.1"
optional = true

[dependencies.directories]
version = "6.0"
optional = true

[dependencies.r2d2]
version = "0.8"
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.async-lock]
version = "3"
optional = true

[dependencies.blocking]
version = "1"
optional = true

[dependencies.web-time]
version = "^1.1.0"

[dev-dependencies]
googletest = "0.14"
tempfile = "3.10.1"
trybuild = "1"
criterion = "0.8"
futures = "0.3"

[dev-dependencies.tokio]
version = "1"
features = ["macros", "time", "sync", "parking_lot", "rt", "rt-multi-thread"]

[dev-dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dev-dependencies.smartstring]
version = "1"

[dev-dependencies.serial_test]
version = "3"

[workspace]
members = ["cached_proc_macro", "examples/wasm"]

# Elevate all compiler warnings to errors across the workspace (equivalent to
# `-D warnings`). Applies to `cargo build`/`test`/`clippy`, not just the Makefile
# clippy target. Members opt in with `[lints] workspace = true`.
[workspace.lints.rust]
warnings = "deny"

[[example]]
name = "redis"
required-features = ["redis_store", "proc_macro"]

[[example]]
name = "redis-async-tokio"
required-features = ["redis_tokio_native_tls", "proc_macro"]

[[example]]
name = "redis-async-async-std"
required-features = ["redis_smol_native_tls", "proc_macro"]

[[example]]
name = "tokio"
required-features = ["async", "proc_macro"]

[[example]]
name = "async_std"
required-features = ["async", "proc_macro"]

[[example]]
name = "expires_per_key"
required-features = ["proc_macro"]

[[example]]
name = "expiring_sized_cache"
required-features = ["time_stores"]

[[example]]
name = "basic"
required-features = ["time_stores", "proc_macro"]

[[example]]
name = "kitchen_sink"
required-features = ["time_stores", "proc_macro"]

[[example]]
name = "disk"
required-features = ["redb_store", "proc_macro"]

[[example]]
name = "disk_async"
required-features = ["redb_store", "async", "proc_macro"]

[[example]]
name = "redis-client-side-cache-tokio"
required-features = ["redis_async_cache", "redis_tokio_native_tls", "proc_macro"]

[[example]]
name = "sharded"
required-features = ["time_stores", "proc_macro"]

[[example]]
name = "sharded_expiring"
required-features = ["proc_macro"]

[[example]]
name = "struct_method"
required-features = ["proc_macro"]

[[bench]]
name = "cache_benches"
harness = false
required-features = ["time_stores", "proc_macro"]
