[package]
name = "cached_proc_macro"
version = "0.24.0"
authors = ["csos95 <csoscss@gmail.com>", "James Kominick <james@kominick.com>"]
description = "Generic cache implementations and simplified function memoization"
repository = "https://github.com/jaemk/cached"
documentation = "https://docs.rs/cached"
readme = "README.md"
categories = ["caching"]
keywords = ["caching", "cache", "memoize", "lru"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.6"
proc-macro2 = "1.0.49"
syn = "2.0.52"
strum-lite = "0.1.1"
attrs = "0.2.3"
