[package]
name = "cached_proc_macro"
version = "3.0.0-rc.3"
authors = ["csos95 <csoscss@gmail.com>", "James Kominick <james@kominick.com>"]
description = "Generic cache implementations and simplified function memoization"
repository = "https://github.com/jaemk/cached"
documentation = "https://docs.rs/cached"
readme = "README.md"
categories = ["caching"]
keywords = ["caching", "cache", "memoize", "lru"]
license = "MIT"
edition = "2024"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.6"
darling = "0.20.8"
proc-macro2 = "1.0.49"
syn = "2.0.52"
proc-macro-crate = "3"
