[package]
name = "cached_proc_macro_types"
version = "1.0.0"
authors = ["James Kominick <james@kominick.com>"]
description = "Types used by the cached proc-macro crate"
repository = "https://github.com/jaemk/cached"
documentation = "https://docs.rs/cached_proc_macro_types"
readme = "README.md"
categories = ["caching"]
keywords = ["caching", "cache", "memoize", "cached"]
license = "MIT"
edition = "2024"
rust-version = "1.89"

[dependencies]
